sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:4: error: ')' expected but 'while' found.
  while (ecart>0) {
  ^